--- a/install
+++ b/install
@@ -8,7 +8,7 @@ SCRIPT_PATH="$(dirname "$(readlink -f "${0}")")"
 
 # Header
 . "${SCRIPT_PATH}/lib/header"
-. "${SCRIPT_PATH}/lib/spinner"
+. "${SCRIPT_PATH}/lib/spinners"
 
 parse-parameters "${@}"
 
